test jvm memory